Refactored EulerProblem and EulerReader